[tool.poetry]
name = "RL"
version = "0.1.0"
description = ""
authors = ["Anshrk <anshrk.13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
pygame = "^2.1.2"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
ipython = "^8.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
